# codebase_tutor

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  DEVELOPMENT_GUIDE.md  Makefile  Makefile.dev  README.md  TEMPLATE.md  fix_formatting.sh  pyproject.toml  setup.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
.mdc/: pocketflow-rules.md
docs/: api-reference.md  architecture.md  design.md  developer-guide.md  flow-design.md
docs/app/: codebase-tutor-design.md  firebase_python_guide.md  tutorial-generator-flow.md
docs/template/: api-reference.md  architecture.md  design.md  developer-guide.md  flow-design.md
functions/: main.py  requirements.txt
mobile/: package.json
scripts/: dev.sh
shared/constants/: api.js
src/: __init__.py  main.py
src/app/: __about__.py  __init__.py  config.py  daemon.py  main.py
src/app/api/: __init__.py
src/app/models/: __init__.py
src/app/pocketflow/: __init__.py
src/app/pocketflow/flows/: __init__.py  examples.py
src/app/pocketflow/nodes/: __init__.py  base.py  examples.py
src/app/pocketflow/utils/: __init__.py
src/app/services/: __init__.py
src/app/utils/: __init__.py
src/claude_pocketflow_template/: __about__.py  __init__.py  config.py  daemon.py
src/codebase_tutor/: __init__.py
src/flows/: __init__.py  base.py  examples.py
src/nodes/: __init__.py  base.py  examples.py
src/utils/: __init__.py
tests/: conftest.py  test_config.py  test_daemon.py  test_flows.py  test_nodes.py  test_setup.py
web/: package.json
web/public/: index.html
